--- a/.github/workflows/blk_cluster_pipeline.yaml
+++ b/.github/workflows/blk_cluster_pipeline.yaml
@@ -118,8 +118,9 @@ jobs:
           ansible-playbook vault-setup.yml -i ./inventory/ansible_provisioners \
             -e "@./${{ github.event.inputs.org_name }}-config-${{ github.event.inputs.environment }}.yml" \
             -e "region=${{ env.region }}" \
-            -e "registry=${{ env.registry }}"
-            -e "aws_account_number=${{ env.account }}"
+            -e "registry=${{ env.registry }}" \
+            -e "aws_account_number=${{ env.account }}" \
+            -e "env=${{ github.event.inputs.environment }}"
 
       - name: Cleanup Vault cluster
         if: github.event.inputs.action == 'vault_cleanup'
@@ -127,7 +128,8 @@ jobs:
           ansible-playbook vault-cleanup.yml -i ./inventory/ansible_provisioners \
             -e "@./${{ github.event.inputs.org_name }}-config-${{ github.event.inputs.environment }}.yml" \
             -e "region=${{ env.region }}" \
-            -e "registry=${{ env.registry }}"
+            -e "registry=${{ env.registry }}" \
+            -e "env=${{ github.event.inputs.environment }}"
             
    #   - name: Build and publish baf image
    #     if: github.event.inputs.action == 'baf_image'
@@ -158,7 +160,8 @@ jobs:
             -e "gitops_repo_user=${{ env.repo_user }}" \
             -e "gitops_repo_user_token=${{ env.repo_user_token }}" \
             -e "gitops_repo_user_email=${{ env.repo_user_email }}" \
-            -e "registry=${{ env.registry }}"
+            -e "registry=${{ env.registry }}" \
+            -e "env=${{ github.event.inputs.environment }}"
 
       - name: Reset node
         if: github.event.inputs.action == 'reset'
@@ -174,7 +177,8 @@ jobs:
             -e "gitops_repo_user=${{ env.repo_user }}" \
             -e "gitops_repo_user_token=${{ env.repo_user_token }}" \
             -e "gitops_repo_user_email=${{ env.repo_user_email }}" \
-            -e "registry=${{ env.registry }}"
+            -e "registry=${{ env.registry }}" \
+            -e "env=${{ github.event.inputs.environment }}"
 
       - name: Deploy chaincode
         if: github.event.inputs.action == 'chaincode'
@@ -193,7 +197,8 @@ jobs:
             -e "channel_name=${{ github.event.inputs.channel_name }}" \
             -e "extra_vars=${{ github.event.inputs.extra_vars }}" \
             -e "chaincode_version=v${{ github.event.inputs.chaincode_version }}" \
-            -e "registry=${{ env.registry }}"
+            -e "registry=${{ env.registry }}" \
+            -e "env=${{ github.event.inputs.environment }}"
 
       - name: Deploy new_org prerequisites
         if: github.event.inputs.action == 'new_org'
@@ -211,7 +216,8 @@ jobs:
             -e "gitops_repo_user_email=${{ env.repo_user_email }}" \
             -e "channel_name=${{ github.event.inputs.channel_name }}" \
             -e "org_json=${{ github.event.inputs.org_json }}" \
-            -e "registry=${{ env.registry }}"
+            -e "registry=${{ env.registry }}" \
+            -e "env=${{ github.event.inputs.environment }}"
 
       - name: Deploy new_org
         if: github.event.inputs.action == 'new_org'
@@ -230,7 +236,8 @@ jobs:
             -e "gitops_repo_user_email=${{ env.repo_user_email }}" \
             -e "channel_name=${{ github.event.inputs.channel_name }}" \
             -e "org_json=${ORDERER_TLS_CERT}" \
-            -e "registry=${{ env.registry }}"
+            -e "registry=${{ env.registry }}" \
+            -e "env=${{ github.event.inputs.environment }}"
 
       - name: Deploy add_new_channel
         if: github.event.inputs.action == 'add_new_channel'
@@ -248,7 +255,8 @@ jobs:
             -e "gitops_repo_user_email=${{ env.repo_user_email }}" \
             -e "channel_name=${{ github.event.inputs.channel_name }}" \
             -e "extra_vars=${{ github.event.inputs.extra_vars }}" \
-            -e "registry=${{ env.registry }}"
+            -e "registry=${{ env.registry }}" \
+            -e "env=${{ github.event.inputs.environment }}"
 
       - name: Deploy add_new_org
         if: github.event.inputs.action == 'add_new_org'
@@ -268,7 +276,8 @@ jobs:
             -e "channel_name=${{ github.event.inputs.channel_name }}" \
             -e "org_json=${ORG_MSP}" \
             -e "add_org=${{ github.event.inputs.add_org_name }}" \
-            -e "registry=${{ env.registry }}"
+            -e "registry=${{ env.registry }}" \
+            -e "env=${{ github.event.inputs.environment }}"
 
       - name: Deploy join_peer
         if: github.event.inputs.action == 'join_peer'
@@ -285,11 +294,13 @@ jobs:
             -e "gitops_repo_user_token=${{ env.repo_user_token }}" \
             -e "gitops_repo_user_email=${{ env.repo_user_email }}" \
             -e "channel_name=${{ github.event.inputs.channel_name }}" \
-            -e "registry=${{ env.registry }}"
+            -e "registry=${{ env.registry }}" \
+            -e "env=${{ github.event.inputs.environment }}"
 
       - name: Pre-register users for application
         if: github.event.inputs.action == 'register_users'
         run: |
           ansible-playbook pre-register-users.yml -i ./inventory/ansible_provisioners \
-            -e "@./${{ github.event.inputs.org_name }}-config-${{ github.event.inputs.environment }}.yml"
-            -e "aws_account_number=${{ env.account }}"
+            -e "@./${{ github.event.inputs.org_name }}-config-${{ github.event.inputs.environment }}.yml" \
+            -e "aws_account_number=${{ env.account }}" \
+            -e "env=${{ github.event.inputs.environment }}"
