--- a/awx-automation/roles/prerun-job/tasks/main.yaml
+++ b/awx-automation/roles/prerun-job/tasks/main.yaml
@@ -54,7 +54,7 @@
 
 - name: Configure awscli credentials for IAM user
   shell: aws configure set {{ item.key }} {{ item.value }} --profile cicd-user
-  no_log: false
+  no_log: true
   with_dict:
     aws_access_key_id: "{{ aws_access_key }}"
     aws_secret_access_key: "{{ aws_secret_key }}"
@@ -65,7 +65,7 @@
 
 - name: Configure awscli credentials for IAM role
   shell: aws configure set {{ item.key }} {{ item.value }} --profile cicd-role
-  no_log: false
+  no_log: true
   with_dict:
     external_id: "{{ aws_external_id }}"
     source_profile: "cicd-user"
