--- a/ansible-automation/mongodb-setup.yml
+++ b/ansible-automation/mongodb-setup.yml
@@ -1,14 +1,17 @@
 - hosts: ansible_provisioners
   gather_facts: no
-  no_log: "{{ no_ansible_log | default(true) }}"
+  no_log: "{{ no_ansible_log | default(false) }}"
   tasks:
-    - set_fact:
+    - no_log: true
+      set_fact:
         user_token: "{{ lookup('password', '/dev/null chars=ascii_uppercase,ascii_lowercase,digits length=40') }}"
 
-    - set_fact:
+    - no_log: true
+      set_fact:
         root_token: "{{ lookup('password', '/dev/null chars=ascii_uppercase,ascii_lowercase,digits length=40') }}"
 
-    - set_fact:
+    - no_log: true
+      set_fact:
         user: "{{ lookup('password', '/dev/null chars=ascii_uppercase,ascii_lowercase,digits length=16') }}"
 
     - include_role:
