--- a/ansible-automation/roles/mongodb/tasks/main.yaml
+++ b/ansible-automation/roles/mongodb/tasks/main.yaml
@@ -2,7 +2,7 @@
 - name: Generate aws resource policy from template aws_resource_policy.json.j2
   template:
     src: templates/aws_resource_policy.json.j2
-    dest: ./aws_resource_policy.json
+    dest: "./aws_resource_policy.json"
     mode: 0755
 
 - name: Create a k8s namespace
@@ -29,6 +29,7 @@
     - mongodb
 
 - name: Install mongodb helm chart
+  no_log: true
   shell: |
     helm --namespace database install {{ network.org_name }} bitnami/mongodb \
     --set architecture=replicaset \
@@ -72,14 +73,17 @@
 #   ignore_errors: yes
 
 - name: upload mongodb user to aws secrets manager
+  no_log: true
   shell: |
     aws secretsmanager create-secret --name {{ network.org_name }}-{{ env }}-mongodb-user --description "Mongodb User Name" --secret-string {{ mongodb_user }}
 
 - name: upload mongodb user token to aws secrets manager
+  no_log: true
   shell: |
     aws secretsmanager create-secret --name {{ network.org_name }}-{{ env }}-mongodb-user-token --description "Mongodb User Token" --secret-string {{ mongodb_user_token }}
 
 - name: upload mongodb root token to aws secrets manager
+  no_log: true
   shell: |
     aws secretsmanager create-secret --name {{ network.org_name }}-{{ env }}-mongodb-root-token --description "Mongodb root token" --secret-string {{ mongodb_root_token }}
 
@@ -87,8 +91,9 @@
   shell: |
     aws secretsmanager put-resource-policy --secret-id {{ item }} --resource-policy file://aws_resource_policy.json --block-public-policy
   with_items:
-    - {{ network.org_name }}-{{ env }}-mongodb-user-token
-    - {{ network.org_name }}-{{ env }}-mongodb-root-token
+  - "{{ network.org_name }}-{{ env }}-mongodb-user-token"
+  - "{{ network.org_name }}-{{ env }}-mongodb-root-token"
+  - "{{ network.org_name }}-{{ env }}-mongodb-user"
 
 - name: Delete aws resource policy file
   file:
