--- a/awx-automation/mongodb.yml
+++ b/awx-automation/mongodb.yml
@@ -18,15 +18,18 @@
       shell: |
         export AWS_PROFILE=cicd-role; aws eks update-kubeconfig --region {{ aws_region }} --name {{ app_cluster_name }}
 
-    - set_fact:
+    - no_log: true
+      set_fact:
         user_token: "{{ lookup('password', '/dev/null chars=ascii_uppercase,ascii_lowercase,digits length=40') }}"
       when: deploy_action == "mongodb-deploy"
 
-    - set_fact:
+    - no_log: true
+      set_fact:
         root_token: "{{ lookup('password', '/dev/null chars=ascii_uppercase,ascii_lowercase,digits length=40') }}"
       when: deploy_action == "mongodb-deploy"
 
-    - set_fact:
+    - no_log: true
+      set_fact:
         user: "{{ lookup('password', '/dev/null chars=ascii_uppercase,ascii_lowercase,digits length=16') }}"
       when: deploy_action == "mongodb-deploy"
 
