--- a/ansible-automation/roles/baf/network/tasks/main.yaml
+++ b/ansible-automation/roles/baf/network/tasks/main.yaml
@@ -20,6 +20,7 @@
     state: present
 
 - name: Create secret for network details
+  no_log: true 
   community.kubernetes.k8s:
     state: present
     definition: 
@@ -33,6 +34,7 @@
         org.creds: "{{ org_json | default('') }}"
 
 - name: Create secret for aws credentials
+  no_log: true 
   community.kubernetes.k8s:
     state: present
     definition: 
@@ -47,6 +49,7 @@
         KEY: "{{ access_key | b64encode }}"
 
 - name: Create secret for github token
+  no_log: true 
   community.kubernetes.k8s:
     state: present
     definition:
@@ -64,6 +67,7 @@
     kubectl -n openidl-baf create configmap network-setup --from-file=network-setup.yml=./network-setup.yml
 
 - name: Launch baf container
+  no_log: true 
   community.kubernetes.k8s:
     state: present
     wait: yes
