--- a/awx-automation/roles/baf/network/tasks/main.yaml
+++ b/awx-automation/roles/baf/network/tasks/main.yaml
@@ -21,6 +21,7 @@
     state: present
 
 - name: Create secret for network details
+  no_log: true
   community.kubernetes.k8s:
     state: present
     definition: 
@@ -34,6 +35,7 @@
         org.creds: "{{ org_json | default('') }}"
 
 - name: Create secret for aws credentials
+  no_log: true
   community.kubernetes.k8s:
     state: present
     definition: 
@@ -48,6 +50,7 @@
         KEY: "{{ access_key | b64encode }}"
 
 - name: Create secret for github token
+  no_log: true
   community.kubernetes.k8s:
     state: present
     definition:
@@ -65,6 +68,7 @@
     kubectl -n openidl-baf create configmap network-setup --from-file=network-setup.yml=./network-setup.yml
 
 - name: Launch baf container
+  no_log: true
   community.kubernetes.k8s:
     state: present
     wait: yes
