--- a/ansible-automation/aais-config-dev.yml
+++ b/ansible-automation/aais-config-dev.yml
@@ -1,6 +1,7 @@
 ordererorg_domain: "thetech.digital"
 domain: "thetech.digital"
 internal_domain: "internal.thetech.digital"
+gitops_repo_url: "github.com/rajeshsanjeevi/openidl-iaac"
 add_org: ""
 chaincode_version: ""
 node_type: "aais"
