--- a/ansible-automation/aais-config-dev.yml
+++ b/ansible-automation/aais-config-dev.yml
@@ -2,6 +2,7 @@ ordererorg_domain: "thetech.digital"
 domain: "thetech.digital"
 internal_domain: "internal.thetech.digital"
 gitops_repo_url: "github.com/rajeshsanjeevi/openidl-iaac"
+gitops_repo_branch: "develop-singlevpc"
 add_org: ""
 chaincode_version: ""
 node_type: "aais"
