--- a/ansible-automation/roles/baf/pre-register-users/tasks/main.yaml
+++ b/ansible-automation/roles/baf/pre-register-users/tasks/main.yaml
@@ -32,6 +32,7 @@
     kubectl -n vault create configmap pre-register-users-script --from-file=pre-register-users.sh=./pre-register-users.sh
 
 - name: Create secret for credentials
+  no_log: true
   community.kubernetes.k8s:
     state: present
     definition: 
@@ -48,6 +49,7 @@
         VAULT_KVS_USER_TOKEN: "{{ vault_kvs_user_token | b64encode }}"
 
 - name: Launch Pod for pre-register-users
+  no_log: true
   community.kubernetes.k8s:
     state: present
     definition:
@@ -139,6 +141,7 @@
 #   ignore_errors: yes
 
 - name: upload ca user token to aws secrets manager
+  no_log: true
   shell: |
     aws secretsmanager create-secret --name {{ network.org_name }}-{{ env }}-ca-app-user-token --description "Ca App User token" --secret-string {{ ca_user_token }}
   when: ca_user_token_status == "null"
