--- a/awx-automation/roles/openidl-apps/tasks/main.yaml
+++ b/awx-automation/roles/openidl-apps/tasks/main.yaml
@@ -11,6 +11,7 @@
     state: present
 
 - name: Download git repository content
+  no_log: true
   git:
     repo: "https://{{ gitrepo_username|urlencode() }}:{{ gitrepo_password|urlencode() }}@{{ gitrepo_name }}"
     dest: /tmp/openidl
