--- a/blockchain-automation-framework/platforms/hyperledger-fabric/configuration/roles/delete/vault_secrets/tasks/main.yaml
+++ b/blockchain-automation-framework/platforms/hyperledger-fabric/configuration/roles/delete/vault_secrets/tasks/main.yaml
@@ -47,7 +47,7 @@
     kubeconfig: "{{ kubernetes.config_file }}"
     context: "{{ kubernetes.context }}"
     state: absent
-  when: network.env.proxy == 'haproxy'
+  when: network.env.proxy == 'haproxy' or network.env.proxy == 'nginx'
   ignore_errors: yes
   
 - name: Delete Ambassador creds
@@ -70,7 +70,7 @@
     kubeconfig: "{{ kubernetes.config_file }}"
     context: "{{ kubernetes.context }}"
     state: absent
-  when: network.env.proxy == 'haproxy'
+  when: network.env.proxy == 'haproxy' or network.env.proxy == 'nginx'
   ignore_errors: yes
 
 ############################################################################################
