--- a/blockchain-automation-framework/platforms/hyperledger-fabric/charts/orderernode/templates/service.yaml
+++ b/blockchain-automation-framework/platforms/hyperledger-fabric/charts/orderernode/templates/service.yaml
@@ -68,7 +68,7 @@ spec:
   clusterIP: None
   {{- end }}
   
-{{ if eq $.Values.proxy.provider "haproxy" }}
+{{ if eq $.Values.proxy.provider "nginx" }}
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
