--- a/blockchain-automation-framework/platforms/hyperledger-fabric/charts/peernode/templates/service.yaml
+++ b/blockchain-automation-framework/platforms/hyperledger-fabric/charts/peernode/templates/service.yaml
@@ -8,7 +8,7 @@ metadata:
   # This can be fixed only when https://jira.hyperledger.org/browse/FAB-8131 issue is fixed
   # After the issue is fixed, changes similar to the commented code has to be done by using correct secrets.
   # Otherwise as ambassador is not able to passthrough TLS connection, grpc over ambassador is not going to work
-  # hence we have used a HAProxy ingress whoich does ssl-passthrough.  
+  # hence we have used a HAProxy ingress which does ssl-passthrough.
   annotations:
     {{- if $.Values.annotations }}
     {{- range $key, $value := $.Values.annotations.service }}
@@ -95,7 +95,7 @@ spec:
   loadBalancerIP: {{ $.Values.service.loadBalancerIP }}
   {{- end }}
 
-{{- if eq $.Values.proxy.provider "haproxy" }}
+{{- if eq $.Values.proxy.provider "nginx" }}
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
