--- a/.github/workflows/blk_cluster_pipeline.yaml
+++ b/.github/workflows/blk_cluster_pipeline.yaml
@@ -54,6 +54,8 @@ jobs:
       region: ${{ secrets.aws_region }}
       access_id: ${{ secrets.baf_user_access_key }}
       access_key: ${{ secrets.baf_user_secret_key }}
+      external_id: ${{ secrets.baf_user_external_id }}
+      iam_role: ${{ secrets.baf_user_assume_role_arn }}
       account: ${{ secrets.aws_account_number }}
       repo_user: ${{ secrets.git_repo_user }}
       repo_user_token: ${{ secrets.git_repo_user_token }}
@@ -156,6 +158,8 @@ jobs:
             -e "region=${{ env.region }}" \
             -e "access_id=${{ env.access_id }}" \
             -e "access_key=${{ env.access_key }}" \
+            -e "external_id=${{ env.external_id }} \
+            -e "iam_role=${{ env.iam_role }} \
             -e "account=${{ env.account }}" \
             -e "gitops_repo_user=${{ env.repo_user }}" \
             -e "gitops_repo_user_token=${{ env.repo_user_token }}" \
@@ -173,6 +177,8 @@ jobs:
             -e "region=${{ env.region }}" \
             -e "access_id=${{ env.access_id }}" \
             -e "access_key=${{ env.access_key }}" \
+            -e "external_id=${{ env.external_id }} \
+            -e "iam_role=${{ env.iam_role }} \
             -e "account=${{ env.account }}" \
             -e "gitops_repo_user=${{ env.repo_user }}" \
             -e "gitops_repo_user_token=${{ env.repo_user_token }}" \
@@ -190,6 +196,8 @@ jobs:
             -e "region=${{ env.region }}" \
             -e "access_id=${{ env.access_id }}" \
             -e "access_key=${{ env.access_key }}" \
+            -e "external_id=${{ env.external_id }} \
+            -e "iam_role=${{ env.iam_role }} \
             -e "account=${{ env.account }}" \
             -e "gitops_repo_user=${{ env.repo_user }}" \
             -e "gitops_repo_user_token=${{ env.repo_user_token }}" \
@@ -210,6 +218,8 @@ jobs:
             -e "region=${{ env.region }}" \
             -e "access_id=${{ env.access_id }}" \
             -e "access_key=${{ env.access_key }}" \
+            -e "external_id=${{ env.external_id }} \
+            -e "iam_role=${{ env.iam_role }} \
             -e "account=${{ env.account }}" \
             -e "gitops_repo_user=${{ env.repo_user }}" \
             -e "gitops_repo_user_token=${{ env.repo_user_token }}" \
@@ -230,6 +240,8 @@ jobs:
             -e "region=${{ env.region }}" \
             -e "access_id=${{ env.access_id }}" \
             -e "access_key=${{ env.access_key }}" \
+            -e "external_id=${{ env.external_id }} \
+            -e "iam_role=${{ env.iam_role }} \
             -e "account=${{ env.account }}" \
             -e "gitops_repo_user=${{ env.repo_user }}" \
             -e "gitops_repo_user_token=${{ env.repo_user_token }}" \
@@ -249,6 +261,8 @@ jobs:
             -e "region=${{ env.region }}" \
             -e "access_id=${{ env.access_id }}" \
             -e "access_key=${{ env.access_key }}" \
+            -e "external_id=${{ env.external_id }} \
+            -e "iam_role=${{ env.iam_role }} \
             -e "account=${{ env.account }}" \
             -e "gitops_repo_user=${{ env.repo_user }}" \
             -e "gitops_repo_user_token=${{ env.repo_user_token }}" \
@@ -269,6 +283,8 @@ jobs:
             -e "region=${{ env.region }}" \
             -e "access_id=${{ env.access_id }}" \
             -e "access_key=${{ env.access_key }}" \
+            -e "external_id=${{ env.external_id }} \
+            -e "iam_role=${{ env.iam_role }} \
             -e "account=${{ env.account }}" \
             -e "gitops_repo_user=${{ env.repo_user }}" \
             -e "gitops_repo_user_token=${{ env.repo_user_token }}" \
@@ -289,6 +305,8 @@ jobs:
             -e "region=${{ env.region }}" \
             -e "access_id=${{ env.access_id }}" \
             -e "access_key=${{ env.access_key }}" \
+            -e "external_id=${{ env.external_id }} \
+            -e "iam_role=${{ env.iam_role }} \
             -e "account=${{ env.account }}" \
             -e "gitops_repo_user=${{ env.repo_user }}" \
             -e "gitops_repo_user_token=${{ env.repo_user_token }}" \
