--- a/ansible-automation/roles/baf/network/tasks/main.yaml
+++ b/ansible-automation/roles/baf/network/tasks/main.yaml
@@ -123,6 +123,14 @@
             git clone https://{{ gitops_repo_user|urlencode() }}:${PAT}@{{ gitops_repo_url|urlencode() }} -b {{ gitops_repo_branch }} $LOCAL_PATH
             mkdir /home/blockchain-automation-framework/build
             touch /home/blockchain-automation-framework/build/orderer1.crt
+            aws configure set aws_access_key_id ${AWS_ACCESS_KEY_ID} --profile baf-user
+            aws configure set aws_secret_key_id ${AWS_SECRET_ACCESS_KEY} --profile baf-user
+            aws configure set region ${AWS_REGION} --profile baf-user
+            aws configure set external_id {{ external_id }} --profile baf-user
+            aws configure set external_id {{ external_id }} --profile baf-role
+            aws configure set source_profile baf-user --profile baf-role
+            aws configure set role_arn {{ iam_role }} --profile baf-role
+            export AWS_PROFILE=baf-role
             aws eks --region {{ region }} update-kubeconfig --name {{ cluster_name }}
             cd $LOCAL_PATH
             ansible-playbook blockchain-automation-framework/platforms/shared/configuration/environment-setup.yaml -e "@/home/config/network-setup.yml" -e "no_ansible_log=true"
