--- a/ansible-automation/roles/baf/network/tasks/main.yaml
+++ b/ansible-automation/roles/baf/network/tasks/main.yaml
@@ -124,7 +124,7 @@
             mkdir /home/blockchain-automation-framework/build
             touch /home/blockchain-automation-framework/build/orderer1.crt
             aws configure set aws_access_key_id ${AWS_ACCESS_KEY_ID} --profile baf-user
-            aws configure set aws_secret_key_id ${AWS_SECRET_ACCESS_KEY} --profile baf-user
+            aws configure set aws_secret_access_key ${AWS_SECRET_ACCESS_KEY} --profile baf-user
             aws configure set region ${AWS_REGION} --profile baf-user
             aws configure set external_id {{ external_id }} --profile baf-user
             aws configure set external_id {{ external_id }} --profile baf-role
