--- a/ansible-automation/roles/baf/network/tasks/main.yaml
+++ b/ansible-automation/roles/baf/network/tasks/main.yaml
@@ -84,23 +84,23 @@
         - name: baf
           image: "{{ registry }}/openidl-baf"
           env:
-          - name: AWS_ACCESS_KEY_ID
-            valueFrom:
-              secretKeyRef:
-                name: openidl-baf-aws
-                key: ID
-          - name: AWS_SECRET_ACCESS_KEY
-            valueFrom:
-              secretKeyRef:
-                name: openidl-baf-aws
-                key: KEY
+          #- name: AWS_ACCESS_KEY_ID
+          #  valueFrom:
+          #    secretKeyRef:
+          #      name: openidl-baf-aws
+          #      key: ID
+          #- name: AWS_SECRET_ACCESS_KEY
+          #  valueFrom:
+          #    secretKeyRef:
+          #      name: openidl-baf-aws
+          #      key: KEY
           - name: PAT
             valueFrom:
               secretKeyRef:
                 name: openidl-github-pat
                 key: PAT
-          - name: AWS_REGION
-            value: "{{ region }}"
+          #- name: AWS_REGION
+          #  value: "{{ region }}"
           - name: ACTION
             value: "{{ action }}"
           - name: ORG_NAME
