--- a/blockchain-automation-framework/platforms/hyperledger-fabric/configuration/roles/create/namespace_vaultauth/tasks/main.yaml
+++ b/blockchain-automation-framework/platforms/hyperledger-fabric/configuration/roles/create/namespace_vaultauth/tasks/main.yaml
@@ -122,4 +122,4 @@
 - name: Create Secret for github over https connection
   no_log: true
   shell: |
-    KUBECONFIG={{ kubeconfig_path }} kubectl create secret generic git-auth-{{ network.env.type }} --from-literal=username={{ git_username }}  --from-literal=password={{ git_password }} --namespace {{ item.name | lower }}-net
+    KUBECONFIG={{ kubeconfig_path }} kubectl create secret generic git-auth-{{ network.env.type }} --from-literal=username={{ item.gitops.username }}  --from-literal=password={{ item.gitops.password }} --namespace {{ item.name | lower }}-net
